#2 fix layout issues

--- a/app/src/screens/saved/styles/saved-item.css
+++ b/app/src/screens/saved/styles/saved-item.css
@@ -18,7 +18,8 @@
     color: #424242;
 }
 .saved-item .avatar {
-    width: 8em;
+    -webkit-flex: none;
+    width: 3em;
     text-align: center;
 }
 .saved-item .avatar span {
@@ -42,27 +43,27 @@
 
 .saved-item .article {
     height: 6.9em;
-    display: -webkit-flex;
 }
 .saved-item .article h1 {
     margin: 0.5em 0.5em 0.5em 0;
 }
 .saved-item .text {
+    float: left;
     box-sizing: border-box;
-    height: 100%;
     font-size: 0.8em;
 }
 .saved-item .image {
+    float: left;
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 .saved-item p {
-    font-size: 0.8em;
+    font-size: 0.9em;
     line-height: 1.4;
     margin: 0 0.5em 0.5em 0;
-    max-height: 3.8em;
+    max-height: 4em;
     overflow: hidden;
     color: #a3a3a3;
 }
